WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
128921
Fix RegisterSet::calleeSaveRegisters() by making it correct on ARM64
https://bugs.webkit.org/show_bug.cgi?id=128921
Summary
Fix RegisterSet::calleeSaveRegisters() by making it correct on ARM64
Filip Pizlo
Reported
2014-02-17 11:26:52 PST
I forgot about FPRs.
Attachments
the patch
(1.68 KB, patch)
2014-02-17 11:27 PST
,
Filip Pizlo
mhahnenberg
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2014-02-17 11:27:50 PST
Created
attachment 224401
[details]
the patch
Mark Hahnenberg
Comment 2
2014-02-17 11:29:38 PST
Comment on
attachment 224401
[details]
the patch r=me
Filip Pizlo
Comment 3
2014-02-18 20:28:13 PST
Landed in
http://trac.webkit.org/changeset/164237
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug